updating our h1 tag with our name and all p tags with more information

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Max Szczepaniak</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Szczepaniak is pronounced (sha + pontiac). I just hope everyone's day is going alright.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I recently moved here from Memphis,TN. I guess Tennessee is my home but I grew up overseas.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I make music and movies for fun.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Being a self-proclaimed patron of Awesome. A fullstack audio/visual problem solver in a team-based environment. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>15-30 minutes away from everything I would like to do aka Huntersville.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p> I want to finally be able to participate in creating parts of this world that I spend so much time in.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/SzczeZam">Github</a></li>
         </ul>
     </footer>
 </body>
