--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <h1>Where do you live?</h1>
       <p>15-30 minutes away from everything I would like to do aka Huntersville.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p> I want to finally be able to participate in creating parts of this world that I spend so much time in.</p>
+      <p> I want to finally be able to participate in creating parts of this world that I spend so much time in. Also coding is fun.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/SzczeZam">Github</a></li>
+          <li><a href="http://www.github.com/Usernamehere">Github</a></li>
         </ul>
     </footer>
 </body>
